tests/tooling/fixtures/native/execution/negative/compound_assignment_bitwise_bool_rhs.objc3
module CompoundAssignmentBitwiseBoolRhs;

fn main() -> i32 {
  let value = 5;
  let flag = true;
  value ^= flag;
  return value;
}
